--- a/view/registrationPage.ejs
+++ b/view/registrationPage.ejs
@@ -84,7 +84,7 @@
             <div class="relative space-y-1">
               <label for="password" class="block text-sm font-medium text-gray-700">Password</label>
               <div class="mt-1">
-                <input id="password" name="password" type="password" autocomplete="current-password" class="form-control block w-full appearance-none rounded-md border border-gray-300 px-3 py-2 placeholder-gray-400 shadow-sm focus:border-green-500 focus:outline-none focus:ring-green-500 sm:text-sm" />
+                <input id="password" name="password" type="password" autocomplete="current-password" class="block w-full appearance-none rounded-md border border-gray-300 px-3 py-2 placeholder-gray-400 shadow-sm focus:border-green-500 focus:outline-none focus:ring-green-500 sm:text-sm" />
               </div>
             </div>
 
@@ -92,10 +92,6 @@
               <div class="flex items-center">
                 <input id="remember-me" name="remember-me" type="checkbox" class="h-4 w-4 rounded border-gray-300 text-green-600 focus:ring-green-500" />
                 <label for="remember-me" class="ml-2 block text-sm text-gray-900">Remember me</label>
-              </div>
-
-              <div class="text-sm">
-                <a href="/reset-password" class="font-medium text-green-600 hover:text-green-500">Forgot your password?</a>
               </div>
             </div>
 
