--- a/view/resetPasswordPage.ejs
+++ b/view/resetPasswordPage.ejs
@@ -1,25 +1,36 @@
-<%- include('includes/header') %> <%- include('includes/goToHomePage') %>
-<div class="text-center mt-4 mx-4">
-  <h2 class="text-2xl mb-5">Reset Your Password</h2>
-  <div class="max-w-md sm:max-w-sm mx-auto bg-white p-4 m-4 rounded">
-    <%- include('includes/flash') %>
-    <form action="/reset-password" method="POST">
+<%- include('includes/header') %>
+
+<div class="flex min-h-full">
+  <div class="flex flex-1 flex-col justify-center py-12 px-4 sm:px-6 lg:flex-none lg:px-20 xl:px-24">
+    <div class="mx-auto w-full max-w-sm lg:w-96">
       <div>
-        <p class="text-left text-xl mb-4">Step 1 of 2:</p>
-        <label for="reset_password" class="block text-left uppercase text-gray-700 text-sm font-bold mb-2"> Enter your email</label>
-        <input name="reset_password_email" class="w-full rounded block py-3 px-4 leading-tight border border-gray-200 bg-gray-200 my-4 focus:outline-none appearance-none focus:bg-white text-gray-700" type="text" />
+        <h1 class="mt-6 text-3xl font-bold tracking-tight text-gray-900">Reset Your Password</h1>
+        <p class="mt-2 text-sm text-gray-600">
+          Or
+          <a href="/login" class="font-medium text-green-600 hover:text-green-500">Sign in</a>
+        </p>
       </div>
-      <button class="w-full bg-green-600 text-white hover:bg-green-700 rounded py-3">Send Me a Reset Token</button>
-    </form>
-    <div class="text-xs mt-3">
-      <p>
-        Having trouble seeing your reset token? Check your
-        <strong>SPAM</strong> folder.
-      </p>
-      <p>Still don't see your reset token? Contact me at <em>adamu.dankore@gmail.com</em></p>
+
+      <div class="mt-8">
+        <div class="mt-6">
+          <form action="/reset-password" method="POST" class="space-y-6">
+            <%- include('includes/flash') %>
+            <div>
+              <label for="reset_password_email" class="block text-sm font-medium text-gray-700">Email address</label>
+              <div class="mt-1">
+                <input id="reset_password_email" name="reset_password_email" type="email" autocomplete="email" class="block w-full appearance-none rounded-md border border-gray-300 px-3 py-2 placeholder-gray-400 shadow-sm focus:border-green-500 focus:outline-none focus:ring-green-500 sm:text-sm" />
+              </div>
+            </div>
+
+            <button type="submit" class="flex w-full justify-center rounded-md border border-transparent bg-green-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-offset-2">Send Me a Reset Token</button>
+          </form>
+        </div>
+      </div>
     </div>
   </div>
-  <a href="/login" class="inline-block">Return to <span class="text-green-600 text-left">login</span> page</a>
+  <div class="relative hidden w-0 flex-1 lg:block">
+    <img class="absolute inset-0 h-full w-full object-cover" src="https://images.unsplash.com/photo-1505904267569-f02eaeb45a4c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1908&q=80" alt="" />
+  </div>
 </div>
 
 <%- include('includes/footer') %>
