add padding to about page

--- a/view/about.ejs
+++ b/view/about.ejs
@@ -9,7 +9,7 @@
       <p class="mx-auto mt-5 max-w-xl text-xl text-gray-500">Project by GSS Gwarinpa class of 2006.</p>
     </div>
 
-    <div class="relative bg-white">
+    <div class="relative bg-white p-16">
       <div class="lg:mx-auto lg:grid lg:max-w-7xl lg:grid-cols-2 lg:items-start lg:gap-24 lg:px-8">
         <div class="relative sm:py-16 lg:py-0">
           <div aria-hidden="true" class="hidden sm:block lg:absolute lg:inset-y-0 lg:right-0 lg:w-screen">
@@ -49,7 +49,7 @@
 
         <div class="relative mx-auto max-w-md px-4 sm:max-w-3xl sm:px-6 lg:px-0">
           <!-- Content area -->
-          <div class="pt-12 sm:pt-16 lg:pt-20">
+          <div class="pt-12 sm:pt-16">
             <h2 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">On a mission to empower GSS Gwarinpa present and past students</h2>
             <div class="mt-6 space-y-6 text-gray-500">
               <p class="text-lg">Welcome to the community of GSS Gwarinpa!</p>
