--- a/view/404.ejs
+++ b/view/404.ejs
@@ -1,8 +1,35 @@
 <%- include('includes/header') %>
 
-<div class="text-center m-4">
-  <p class="text-6xl">404</p>
-  <h2>Abeg no vex, that page is not available.</h2>
-  <p class="lead text-muted">You can always visit the <a href="/" class="text-green-700 underline">homepage</a> to start over.</p>
+<div class="flex min-h-full flex-col lg:relative md:max-w-7xl md:mx-auto">
+  <div class="flex flex-grow flex-col">
+    <main class="flex flex-grow flex-col">
+      <div class="mx-auto flex w-full max-w-7xl flex-grow flex-col px-4 sm:px-6 lg:px-8">
+        <div class="my-auto flex-shrink-0 py-16 sm:py-32">
+          <p class="text-base font-semibold text-green-600">404</p>
+          <h1 class="mt-2 text-4xl font-bold tracking-tight text-gray-900 sm:text-5xl">Page not found</h1>
+          <p class="mt-2 text-base text-gray-500">Sorry, we couldn’t find the page you’re looking for.</p>
+          <div class="mt-6">
+            <a href="/" class="text-base font-medium text-green-600 hover:text-green-500">
+              Go back home
+              <span aria-hidden="true"> &rarr;</span>
+            </a>
+          </div>
+        </div>
+      </div>
+    </main>
+    <footer class="flex-shrink-0 bg-gray-50">
+      <div class="mx-auto w-full max-w-7xl px-4 py-16 sm:px-6 lg:px-8">
+        <nav class="flex space-x-4">
+          <a href="mailto:adamu.dankore@gmail.com" class="text-sm font-medium text-gray-500 hover:text-gray-600">Contact the Developer</a>
+          <span class="inline-block border-l border-gray-300" aria-hidden="true"></span>
+          <a href="https://www.facebook.com/groups/unitinggwarinpastudents" class="text-sm font-medium text-gray-500 hover:text-gray-600">Facebook</a>
+        </nav>
+      </div>
+    </footer>
+  </div>
+  <div class="hidden lg:absolute lg:inset-y-0 lg:right-0 lg:block lg:w-1/2">
+    <img class="absolute inset-0 h-full w-full object-cover" src="https://images.unsplash.com/photo-1470847355775-e0e3c35a9a2c?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1825&q=80" alt="" />
+  </div>
 </div>
+
 <%- include('includes/footer') %>
