--- a/view/includes/profile.ejs
+++ b/view/includes/profile.ejs
@@ -1,5 +1,5 @@
 <li>
-  <a href="/profile/<%= profile.email %>" class="space-y-6">
+  <a href="/contacts/<%= profile.username %>" class="space-y-6">
     <% if(profile.photo){ %>
     <img class="object-contain mx-auto rounded-full h-56 w-56 bg-gray-900" src="<%= profile.photo %>" alt="<%= profile.firstName %> <%= profile.lastName %>" />
     <% } else { %>
@@ -24,7 +24,7 @@
     </li>
     <% } %>
     <li>
-      <a href="mailto:<%=profile.email%>" class="text-gray-400 hover:text-gray-500">
+      <a href="mailto:<%=profile.username%>" class="text-gray-400 hover:text-gray-500">
         <span class="sr-only">Email</span>
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5">
           <path stroke-linecap="round" stroke-linejoin="round" d="M21.75 6.75v10.5a2.25 2.25 0 01-2.25 2.25h-15a2.25 2.25 0 01-2.25-2.25V6.75m19.5 0A2.25 2.25 0 0019.5 4.5h-15a2.25 2.25 0 00-2.25 2.25m19.5 0v.243a2.25 2.25 0 01-1.07 1.916l-7.5 4.615a2.25 2.25 0 01-2.36 0L3.32 8.91a2.25 2.25 0 01-1.07-1.916V6.75" />
