--- a/view/includes/toggleMoreProfile.ejs
+++ b/view/includes/toggleMoreProfile.ejs
@@ -12,7 +12,7 @@
       <span class="text-gray-600">Relationship Status 💍:</span> <%= profile.relationship %>
     </p>
   <p class="mb-1">
-    <span class="text-gray-600">Email 📩:</span> <%= profile.email %>
+    <span class="text-gray-600">Email 📩:</span> <%= profile.username %>
   </p>
   <p class="mb-1 ">
     <span class="text-gray-600">Phone Number 📞:</span> <%= profile.phone %>
