--- a/view/homePage.ejs
+++ b/view/homePage.ejs
@@ -16,7 +16,7 @@
       <p class="mx-auto mt-3 max-w-md text-lg text-gray-500 sm:text-xl md:mt-5 md:max-w-3xl">Are you a current or past student of Junior or Senior Goverment Secondary Gwarinpa, Abuja - F.C.T? Add your contact or view and search the contacts of your school and classmmates. Project by GSS Gwarinpa class of 2006.</p>
       <div class="mt-10 sm:flex sm:justify-center lg:justify-start">
         <div class="rounded-md shadow">
-          <a href="/<%- user ? 'profile/'+user.email : 'register' %>" class="flex w-full items-center justify-center rounded-md border bg-green-600 px-8 py-3 text-base font-medium text-white hover:bg-green-700 md:py-4 md:px-10 md:text-lg"><%- user ? 'Go to your profile' : 'Add Your Contact' %></a>
+          <a href="/<%- user ? 'contacts/'+user.email : 'register' %>" class="flex w-full items-center justify-center rounded-md border bg-green-600 px-8 py-3 text-base font-medium text-white hover:bg-green-700 md:py-4 md:px-10 md:text-lg"><%- user ? 'Go to your profile' : 'Add Your Contact' %></a>
         </div>
         <div class="mt-3 rounded-md shadow sm:mt-0 sm:ml-3">
           <a href="/contacts" class="flex w-full items-center justify-center rounded-md border bg-white px-8 py-3 text-base font-medium text-green-600 hover:bg-gray-50 md:py-4 md:px-10 md:text-lg">View Contacts</a>
