--- a/view/includes/loggedInUser.ejs
+++ b/view/includes/loggedInUser.ejs
@@ -1,13 +1,13 @@
 <p class="text-center text-2xl mt-4">Welcome, <strong><%= locals.first_name_welcome %>!</strong></p>
 <div class="max-w-sm sm:max-w-lg flex flex-wrap text-xs sm:text-base justify-around text-center mx-auto">
-  <a href="/profile/<%= user.email %>" class="text-center flex items-center justify-center px-1 text-md rounded hover:underline">
+  <a href="/contacts/<%= user.email %>" class="text-center flex items-center justify-center px-1 text-md rounded hover:underline">
     <svg class="mr-1" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-eye">
       <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
       <circle cx="12" cy="12" r="3"></circle>
     </svg>
     Edit Profile
   </a>
-  <a href="/profile/<%= user.email %>/edit" class="text-center flex items-center justify-center px-1 text-md rounded hover:underline my-3 sm:my-3">
+  <a href="/contacts/<%= user.email %>/edit" class="text-center flex items-center justify-center px-1 text-md rounded hover:underline my-3 sm:my-3">
     <svg class="mr-1" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-edit-3">
       <path d="M12 20h9"></path>
       <path d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"></path>
