--- a/view/about.ejs
+++ b/view/about.ejs
@@ -74,7 +74,7 @@
               </div>
             </dl>
             <div class="mt-10">
-              <a href="/<%- user ? 'contacts/'+user.email : 'register' %>" class="text-base font-medium text-green-600">
+              <a href="/<%- user ? 'contacts/'+user.username : 'register' %>" class="text-base font-medium text-green-600">
                 <%- user ? 'Go to your profile' : 'Add Your Contact' %>
                 <span aria-hidden="true"> &rarr;</span>
               </a>
