--- a/view/changePasswordPage.ejs
+++ b/view/changePasswordPage.ejs
@@ -2,7 +2,7 @@
 <p class="text-center text-2xl mt-4">Change Your Password</p>
 <div class="w-full max-w-md sm:max-w-sm mx-auto mt-8">
   <%- include('includes/flash') %>
-  <form action="/account/<%= user.email %>/change-password" method="POST" class="bg-white shadow-md rounded px-4 pt-6 pb-8 m-4">
+  <form action="/account/<%= user.username %>/change-password" method="POST" class="bg-white shadow-md rounded px-4 pt-6 pb-8 m-4">
     <div class="mb-4">
       <label class="block uppercase text-gray-700 text-sm font-bold mb-2" for="old-password"> Old password </label>
       <input name="old_password" class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500" id="old-password" type="password" />
