--- a/view/editProfilePage.ejs
+++ b/view/editProfilePage.ejs
@@ -6,7 +6,7 @@
 </div>
 <div class="flex justify-center p-2 sm:p-4 sm:mx-auto relative mx-4 max-w-2xl">
   <form
-    action="/profile/<%= profile.email %>/edit"
+    action="/contacts/<%= profile.username %>/edit"
     method="POST"
     enctype="multipart/form-data"
   >
@@ -60,6 +60,21 @@
             id="email"
             type="text"
             readonly
+          />
+        </div>
+        <div class="w-full px-3 mb-3">
+          <label
+            class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-1"
+            for="email"
+          >
+            Username <span class="text-red-600">*</span>
+          </label>
+          <input
+            value="<%= profile.username %>"
+            name="username"
+            class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
+            id="username"
+            type="text"
           />
         </div>
         <div class="w-full px-3 mb-3">
