--- a/view/homePage.ejs
+++ b/view/homePage.ejs
@@ -1,13 +1,13 @@
 <!-- HEADER -->
 <%- include('includes/header') %>
 <!-- HEADER END-->
-<!-- ERROR FLASH MESSAGE -->
-<%- include('includes/flash') %>
-<!-- ERROR FLASH MESSAGE END-->
 
 <section class="lg:relative">
   <div class="mx-auto w-full max-w-7xl pt-16 pb-20 text-center lg:py-48 lg:text-left">
     <div class="px-4 sm:px-8 lg:w-1/2 xl:pr-16">
+      <!-- ERROR FLASH MESSAGE -->
+      <%- include('includes/flash') %>
+      <!-- ERROR FLASH MESSAGE END-->
       <h1 class="text-4xl font-bold tracking-tight text-gray-900 sm:text-5xl md:text-6xl lg:text-5xl xl:text-6xl">
         <p class="text-lg font-semibold text-green-600">Home</p>
         <span class="block xl:inline">Discover Present & Past</span>
@@ -16,7 +16,7 @@
       <p class="mx-auto mt-3 max-w-md text-lg text-gray-500 sm:text-xl md:mt-5 md:max-w-3xl">Are you a current or past student of Junior or Senior Goverment Secondary Gwarinpa, Abuja - F.C.T? Add your contact or view and search the contacts of your school and classmmates. Project by GSS Gwarinpa class of 2006.</p>
       <div class="mt-10 sm:flex sm:justify-center lg:justify-start">
         <div class="rounded-md shadow">
-          <a href="/<%- user ? 'profile/'+user.email : 'register' %>" class="flex w-full items-center justify-center rounded-md border bg-green-600 px-8 py-3 text-base font-medium text-white hover:bg-green-700 md:py-4 md:px-10 md:text-lg"><%- user ? 'Go to your profile' : 'Add Your Contact' %></a>
+          <a href="/<%- user ? 'contacts/'+user.username : 'register' %>" class="flex w-full items-center justify-center rounded-md border bg-green-600 px-8 py-3 text-base font-medium text-white hover:bg-green-700 md:py-4 md:px-10 md:text-lg"><%- user ? 'Go to your profile' : 'Add Your Contact' %></a>
         </div>
         <div class="mt-3 rounded-md shadow sm:mt-0 sm:ml-3">
           <a href="/contacts" class="flex w-full items-center justify-center rounded-md border bg-white px-8 py-3 text-base font-medium text-green-600 hover:bg-gray-50 md:py-4 md:px-10 md:text-lg">View Contacts</a>
@@ -36,7 +36,7 @@
         <h2 class="text-3xl font-bold tracking-tight sm:text-4xl">Recently added contacts</h2>
       </div>
       <ul role="list" class="mx-auto space-y-16 sm:grid sm:grid-cols-3 sm:gap-16 sm:space-y-0 lg:grid-cols-4 lg:max-w-7xl lg:mx-auto">
-        <% if(profiles.length){ %> <% profiles.forEach(profile => { %> <%- include('includes/profile', {profile: profile}) %> <% }) %> <% } else { %>
+        <% if(contacts.length){ %> <% contacts.forEach(contact => { %> <%- include('includes/profile', {profile: contact}) %> <% }) %> <% } else { %>
         <p>No profile found.</p>
         <%}%>
       </ul>
