add canonical url for the homepage

--- a/view/includes/header.ejs
+++ b/view/includes/header.ejs
@@ -25,6 +25,7 @@
     <meta name="twitter:description" content="Find Your GSS Gwarinpa Classmates and Their Contacts." />
     <meta name="twitter:image" content="<%= typeof(locals.seo) == 'undefined' ? 'https://gss-gwarinpa.s3.us-east-2.amazonaws.com/1580629627915' : `${locals.seo.photo}` %>" />
 
+    <link rel="canonical" href="https://www.gssgcontactbook.com/" />
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png" />
     <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png" />
     <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png" />
