--- a/view/contactGuest.ejs
+++ b/view/contactGuest.ejs
@@ -81,8 +81,10 @@
         </section>
 
         <!-- Comments-->
+
         <section id="comments-section" aria-labelledby="notes-title">
           <div class="bg-white shadow sm:overflow-hidden sm:rounded-lg">
+            <% if(profile.comments.length){ %>
             <div class="divide-y divide-gray-200">
               <div class="px-4 py-5 sm:px-6">
                 <h2 id="notes-title" class="text-lg font-medium text-gray-900">Comments</h2>
@@ -99,17 +101,21 @@
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="h-10 w-10 rounded-full">
                           <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 6a3.75 3.75 0 11-7.5 0 3.75 3.75 0 017.5 0zM4.501 20.118a7.5 7.5 0 0114.998 0A17.933 17.933 0 0112 21.75c-2.676 0-5.216-.584-7.499-1.632z" />
                         </svg>
-                        <%}%>
                       </a>
+                      <%}%>
                       <div>
                         <div class="text-sm">
-                          <a href="#" class="font-medium text-gray-900"><%= comment.visitorFirstName %></a>
+                          <% if(comment.visitorUsername) {%>
+                          <a href="<%= comment.visitorUsername %>" class="font-medium text-gray-900"><%= comment.visitorFirstName %></a>
+                          <% } else { %>
+                          <span class="font-medium text-gray-900"><%= comment.visitorFirstName %></span>
+                          <% } %>
                         </div>
                         <div class="mt-1 text-sm text-gray-700">
-                          <p><%- filterUserHTML(comment.comment) %></p>
+                          <p class="comment"><%- filterUserHTML(comment.comment)%></p>
                         </div>
                         <div class="mt-2 space-x-2 text-sm">
-                          <span class="font-medium text-gray-500"><%= comment.commentDate %></span>
+                          <datetime datetime="<%= comment.commentDate %>" class="comment-date-time font-medium text-gray-500"> <%= comment.commentDate %> </datetime>
                           <% if(user){ %>
                           <span class="font-medium text-gray-500">&middot;</span>
                           <button id="edit-comment-button" class="font-medium text-gray-900">Edit</button>
@@ -120,7 +126,7 @@
                     </div>
 
                     <!-- EDIT COMMENT FORM -->
-                    <div class="modal shadow-2xl" style="display: none">
+                    <div class="edit-comment-parent modal shadow-2xl" style="display: none">
                       <textarea id="input-comment" data-comment-id="<%= comment.commentId %>" class="w-full p-2 border border-green-400 rounded" style="background-color: #f2f3f5; white-space: pre-wrap; overflow: hidden"><%= comment.comment %></textarea>
                       <div class="flex justify-between py-4">
                         <button id="cancel-comment-button" class="bg-green-600 text-white px-2 rounded hover:bg-green-800">Cancel</button>
@@ -132,6 +138,10 @@
                 </ul>
               </div>
             </div>
+            <%}%>
+
+            <!-- ADD COMMENT -->
+            <% if(user){ %>
             <div class="bg-gray-50 px-4 py-6 sm:px-6">
               <div class="flex space-x-3">
                 <div class="flex-shrink-0">
@@ -142,7 +152,6 @@
                   <%}%>
                 </div>
 
-                <% if(user){ %>
                 <div class="min-w-0 flex-1">
                   <div>
                     <label for="comment" class="sr-only">About</label>
@@ -152,9 +161,9 @@
                     <button id="add-comment-button" data-visitor-email="<%= user.email %>" data-contact-email="<%= profile.email %>" class="inline-flex items-center justify-center rounded-md border border-transparent bg-blue-600 px-4 py-2 text-sm font-medium text-white shadow-sm hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2">Comment</button>
                   </div>
                 </div>
-                <%}%>
               </div>
             </div>
+            <%}%>
           </div>
         </section>
       </div>
