--- a/view/contactGuest.ejs
+++ b/view/contactGuest.ejs
@@ -8,7 +8,11 @@
       <div class="flex items-center space-x-5">
         <div class="flex-shrink-0">
           <div class="relative">
+            <% if(profile.photo){ %>
             <img class="h-16 w-16 rounded-full" src="<%= profile.photo %>" alt="<%= profile.firstName %> <%= profile.lastName %>" />
+            <% } else { %>
+            <img class="h-16 w-16 rounded-full" src="../../static/blank.png" alt="Blank profile pic" />
+            <%}%>
             <span class="absolute inset-0 rounded-full shadow-inner" aria-hidden="true"></span>
           </div>
         </div>
@@ -84,7 +88,6 @@
 
         <section id="comments-section" aria-labelledby="notes-title">
           <div class="bg-white shadow sm:overflow-hidden sm:rounded-lg">
-            <% if(profile.comments.length){ %>
             <div class="divide-y divide-gray-200">
               <div class="px-4 py-5 sm:px-6">
                 <h2 id="notes-title" class="text-lg font-medium text-gray-900">Comments</h2>
@@ -98,15 +101,13 @@
                         <% if(comment.photo){ %>
                         <img class="h-10 w-10 rounded-full" src="<%= comment.photo %>" alt="" />
                         <% } else { %>
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="h-10 w-10 rounded-full">
-                          <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 6a3.75 3.75 0 11-7.5 0 3.75 3.75 0 017.5 0zM4.501 20.118a7.5 7.5 0 0114.998 0A17.933 17.933 0 0112 21.75c-2.676 0-5.216-.584-7.499-1.632z" />
-                        </svg>
+                        <img class="h-10 w-10 rounded-full" src="https://gss-gwarinpa.s3.us-east-2.amazonaws.com/blank.png" alt="" />
                       </a>
                       <%}%>
                       <div>
                         <div class="text-sm">
                           <% if(comment.visitorUsername) {%>
-                          <a href="<%= comment.visitorUsername %>" class="font-medium text-gray-900"><%= comment.visitorFirstName %></a>
+                          <a href="/contacts/<%= comment.visitorUsername %>" class="font-medium text-gray-900"><%= comment.visitorFirstName %></a>
                           <% } else { %>
                           <span class="font-medium text-gray-900"><%= comment.visitorFirstName %></span>
                           <% } %>
@@ -138,7 +139,6 @@
                 </ul>
               </div>
             </div>
-            <%}%>
 
             <!-- ADD COMMENT -->
             <% if(user){ %>
@@ -155,7 +155,7 @@
                 <div class="min-w-0 flex-1">
                   <div>
                     <label for="comment" class="sr-only">About</label>
-                    <textarea id="input-comment" name="comment" rows="3" class="block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500 sm:text-sm" placeholder="Add a note"></textarea>
+                    <textarea id="input-comment" class="block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500 sm:text-sm" placeholder="What's on your mind?"></textarea>
                   </div>
                   <div class="mt-3 flex items-center justify-between">
                     <button id="add-comment-button" data-visitor-email="<%= user.email %>" data-contact-email="<%= profile.email %>" class="inline-flex items-center justify-center rounded-md border border-transparent bg-blue-600 px-4 py-2 text-sm font-medium text-white shadow-sm hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2">Comment</button>
